--- a/page.html
+++ b/page.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Hello world</h1>
     <span>Welcome in EGYPT</span>
+    <a href="www.google.com" target="_blank" title="google">Google</a>
     <p>Welcome to Cairo</p>
 </body>
 
