add page.html pargraph

--- a/page.html
+++ b/page.html
@@ -13,6 +13,7 @@
     <a href="www.google.com" target="_blank" title="google">Google</a>
     <a href="www.youtube.com" target="_blank" title="youtube">youtube</a>
     <p>Welcome to Cairo</p>
+    <p>Hello from This website</p>
 </body>
 
 </html>
