edit changes in page.html

--- a/page.html
+++ b/page.html
@@ -9,6 +9,8 @@
 
 <body>
     <h1>Hello world</h1>
+    <h2>Version control systems lessons with git</h2>
+    <p>Al-mohamdy git lessons</p>
     <span>Welcome in EGYPT</span>
     <a href="www.google.com" target="_blank" title="google">Google</a>
     <a href="www.youtube.com" target="_blank" title="youtube">youtube</a>
