add new line to master

--- a/page.html
+++ b/page.html
@@ -18,6 +18,7 @@
     <p>Welcome to Cairo</p>
     <p>Hello from This website</p>
     <p>Add year 2018</p>
+    <h1>Line for master</h1>
 </body>
 
 </html>
