another line is added to b02

--- a/page.html
+++ b/page.html
@@ -20,6 +20,7 @@
     <p>Add year 2018</p>
     <h1>Line for master</h1>
     <h1>this is for b01</h1>
+    <h3>Another edit in b02</h3>
 </body>
 
 </html>
