--- a/page.html
+++ b/page.html
@@ -21,6 +21,7 @@
     <h1>Line for master</h1>
     <h1>this is for b01</h1>
     <h1>For new remote repository</h1>
+    <h2>From local repo</h2>
 </body>
 
 </html>
