add new paragraph from repo

--- a/page.html
+++ b/page.html
@@ -23,6 +23,7 @@
     <h1>For new remote repository</h1>
     <h4>git hub repository edit</h4>
     <h2>From local repo</h2>
+    <p>add new paragraph from rep</p>
 </body>
 
 </html>
